<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="Regist">Registration</string>
    <string name="passw">Password</string>
    <string name="email">Email</string>
    <string name="app_name">ShoutOut</string>
    <string name="login">Login</string>
    <string name="savepass">Remember Password</string>
    <string name="Welcome">Welcome</string>
    <string name="logout">Sign out</string>
    <string name="Main">Main</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="shoutwall">Shout Wall</string>
    <string name="btnPost">Post to Wall</string>

</resources>

